[tool.poetry]
name = "pyplots"
version = "0.1.0"
description = ""
authors = ["arkadi <cotniko-arkadi@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
